# id18

./: LICENSE  README.md  demo_python.py  pyproject.toml  slid.lc
examples/python/: demo_python.py
src/livecode/: id18.livecodescript  slid.livecodescript
src/python/: slid.py
src/python/id18/: __init__.py
src/python/id18.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/python/slid/: __init__.py
src/python/slid.egg-info/: PKG-INFO  SOURCES.txt
